bad/assign_field_class_new_class_array.example_compiler_output
ERROR
[1mbad/assign_field_class_new_class_array.lat:9:14: [1;31merror: [0;1massigning to `Y` from incompatible type `int[]`[m
	(new C).fld = new int[3];
	            [1;32m^[m
